Person add is solved and edit button added in front page.

--- a/Index.html
+++ b/Index.html
@@ -45,13 +45,13 @@
       <form>
   <div class="form-row" style="margin-bottom:30px;">
     <div class="col">
-      <input type="number" class="form-control" name="nNumber" placeholder="Number">
+      <input type="number" class="form-control" id="Number" name="Number" placeholder="Number">
     </div>
     <div class="col">
-      <input type="text" class="form-control" name="Firstname" placeholder="First name">
+      <input type="text" class="form-control" id="Firstname" name="Firstname" placeholder="First name">
     </div>
     <div class="col">
-      <input type="text" class="form-control" name="Lastname" placeholder="Last name">
+      <input type="text" class="form-control" id="Lastname"name="Lastname" placeholder="Last name">
     </div>
     <div class="col">
       <button type="button" class="btn btn-success addBtn">Add Person</button>
@@ -73,19 +73,64 @@
       <th scope="row">1</th>
       <td>Mark</td>
       <td>Otto</td>
-      <td><button type="button" class="btn btn-danger delBtn" style="min-width:70%;">Delete</button></td>
+      <td>
+        <button type="button" class="btn btn-primary edBtn">Edit</button>
+        <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
+      </td>
     </tr>
     <tr>
       <th scope="row">2</th>
       <td>Jacob</td>
       <td>Thornton</td>
-      <td><button type="button" class="btn btn-danger delBtn" style="min-width:70%;">Delete</button></td>
+      <td>
+        <button type="button" class="btn btn-primary edBtn">Edit</button>
+        <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
+      </td>
     </tr>
     <tr>
       <th scope="row">3</th>
       <td>Larry</td>
       <td>the Bird</td>
-      <td><button type="button" class="btn btn-danger delBtn" style="min-width:70%;">Delete</button></td>
+      <td>
+        <button type="button" class="btn btn-primary edBtn">Edit</button>
+        <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>
+        <button type="button" class="btn btn-primary edBtn">Edit</button>
+        <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>
+        <button type="button" class="btn btn-primary edBtn">Edit</button>
+        <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>
+        <button type="button" class="btn btn-primary edBtn">Edit</button>
+        <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>
+        <button type="button" class="btn btn-primary edBtn">Edit</button>
+        <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
+      </td>
     </tr>
   </tbody>
 </table>
