--- a/index.html
+++ b/index.html
@@ -16,6 +16,43 @@
 
     </head>
     <body>
+
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form >
+                <div class="form-row">
+                <div class="col">
+                  <input class="form-control" type="number" id="modalNumber" name="modalNumber" placeholder="Number">
+                </div>
+                <div class="col">
+                  <input class="form-control" type="text" id="modalFirstname" name="modalFirstname" placeholder="Firstname">
+                </div>
+                <div class="col">
+                  <input class="form-control" type="text" id="modalSurname" name="modalSurname" placeholder="Surname">
+                </div>
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand  text-white" href="/">GoodJob Logo</a>
     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" />
@@ -74,7 +111,7 @@
       <td>Mark</td>
       <td>Otto</td>
       <td>
-        <button type="button" class="btn btn-primary edBtn">Edit</button>
+        <button type="button" class="btn btn-primary edBtn" data-toggle="modal" data-target="#exampleModalCenter">Edit</button>
         <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
       </td>
     </tr>
@@ -83,7 +120,7 @@
       <td>Jacob</td>
       <td>Thornton</td>
       <td>
-        <button type="button" class="btn btn-primary edBtn">Edit</button>
+        <button type="button" class="btn btn-primary edBtn" data-toggle="modal" data-target="#exampleModalCenter">Edit</button>
         <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
       </td>
     </tr>
@@ -92,7 +129,16 @@
       <td>Larry</td>
       <td>the Bird</td>
       <td>
-        <button type="button" class="btn btn-primary edBtn">Edit</button>
+        <button type="button" class="btn btn-primary edBtn" data-toggle="modal" data-target="#exampleModalCenter">Edit</button>
+        <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
+      </td>
+    </tr>
+    <tr>
+      <th class="tdNumber" scope="row">3</th>
+      <td class="tdFirstame">Larrys</td>
+      <td class="tdSurname">the Birds</td>
+      <td>
+        <button type="button" class="btn btn-primary edBtn" data-toggle="modal" data-target="#exampleModalCenter">Edit</button>
         <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
       </td>
     </tr>
@@ -101,7 +147,7 @@
       <td>Larry</td>
       <td>the Bird</td>
       <td>
-        <button type="button" class="btn btn-primary edBtn">Edit</button>
+        <button type="button" class="btn btn-primary edBtn" data-toggle="modal" data-target="#exampleModalCenter">Edit</button>
         <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
       </td>
     </tr>
@@ -110,7 +156,7 @@
       <td>Larry</td>
       <td>the Bird</td>
       <td>
-        <button type="button" class="btn btn-primary edBtn">Edit</button>
+        <button type="button" class="btn btn-primary edBtn" data-toggle="modal" data-target="#exampleModalCenter">Edit</button>
         <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
       </td>
     </tr>
@@ -119,16 +165,7 @@
       <td>Larry</td>
       <td>the Bird</td>
       <td>
-        <button type="button" class="btn btn-primary edBtn">Edit</button>
-        <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
-      </td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>
-        <button type="button" class="btn btn-primary edBtn">Edit</button>
+        <button type="button" class="btn btn-primary edBtn" data-toggle="modal" data-target="#exampleModalCenter">Edit</button>
         <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
       </td>
     </tr>
@@ -137,6 +174,10 @@
 </div>
     </div>
   </div>
+
+
+
+
 
     </body>
   </html>
