--- a/index.html
+++ b/index.html
@@ -1,21 +1,54 @@
-  <!DOCTYPE html>
-  <html lang="en" dir="ltr">
-    <head>
-      <meta charset="utf-8">
-      <title>Big Test Project</title>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+  <meta charset="utf-8">
+  <title>Big Test Project</title>
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="js/main.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="js/main.js"></script>
+
+</head>
+<body>
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form >
+            <div class="form-row">
+              <div class="col">
+                <input class="form-control" type="number" id="modalNumber" name="modalNumber" placeholder="Number">
+              </div>
+              <div class="col">
+                <input class="form-control" type="text" id="modalFirstname" name="modalFirstname" placeholder="Firstname">
+              </div>
+              <div class="col">
+                <input class="form-control" type="text" id="modalSurname" name="modalSurname" placeholder="Surname">
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
-
-    </head>
-    <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand  text-white" href="/">GoodJob Logo</a>
     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" />
@@ -38,105 +71,105 @@
             <button class="dropdown-item" type="button">Something else here</button>
           </div>
         </div>
-    </div>
+      </div>
 
-    <div class="col">
+      <div class="col">
 
-      <form>
-  <div class="form-row" style="margin-bottom:30px;">
-    <div class="col">
-      <input type="number" class="form-control" id="Number" name="Number" placeholder="Number">
-    </div>
-    <div class="col">
-      <input type="text" class="form-control" id="Firstname" name="Firstname" placeholder="First name">
-    </div>
-    <div class="col">
-      <input type="text" class="form-control" id="Lastname"name="Lastname" placeholder="Last name">
-    </div>
-    <div class="col">
-      <button type="button" class="btn btn-success addBtn">Add Person</button>
+        <form>
+          <div class="form-row" style="margin-bottom:30px;">
+            <div class="col">
+              <input type="number" class="form-control" id="Number" name="Number" placeholder="Number">
+            </div>
+            <div class="col">
+              <input type="text" class="form-control" id="Firstname" name="Firstname" placeholder="First name">
+            </div>
+            <div class="col">
+              <input type="text" class="form-control" id="Lastname"name="Lastname" placeholder="Last name">
+            </div>
+            <div class="col">
+              <button type="button" class="btn btn-success addBtn">Add Person</button>
+            </div>
+          </div>
+        </form>
+
+        <table class="table table-bordered table-dark">
+          <thead>
+            <tr style="background-color:#4c4f52;">
+              <th scope="col">Number</th>
+              <th scope="col">Name</th>
+              <th scope="col">Surname</th>
+              <th scope="col">Operation</th>
+            </tr>
+          </thead>
+          <tbody class="tbdApp">
+            <tr>
+              <th scope="row">1</th>
+              <td>Mark</td>
+              <td>Otto</td>
+              <td>
+                <button type="button" class="btn btn-primary edBtn" data-toggle="modal" data-target="#exampleModalCenter">Edit</button>
+                <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
+              </td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>Jacob</td>
+              <td>Thornton</td>
+              <td>
+                <button type="button" class="btn btn-primary edBtn" data-toggle="modal" data-target="#exampleModalCenter">Edit</button>
+                <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
+              </td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>Larry</td>
+              <td>the Bird</td>
+              <td>
+                <button type="button" class="btn btn-primary edBtn" data-toggle="modal" data-target="#exampleModalCenter">Edit</button>
+                <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
+              </td>
+            </tr>
+            <tr>
+              <th class="tdNumber" scope="row">3</th>
+              <td class="tdFirstame">Larrys</td>
+              <td class="tdSurname">the Birds</td>
+              <td>
+                <button type="button" class="btn btn-primary edBtn" data-toggle="modal" data-target="#exampleModalCenter">Edit</button>
+                <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
+              </td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>Larry</td>
+              <td>the Bird</td>
+              <td>
+                <button type="button" class="btn btn-primary edBtn" data-toggle="modal" data-target="#exampleModalCenter">Edit</button>
+                <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
+              </td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>Larry</td>
+              <td>the Bird</td>
+              <td>
+                <button type="button" class="btn btn-primary edBtn" data-toggle="modal" data-target="#exampleModalCenter">Edit</button>
+                <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
+              </td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>Larry</td>
+              <td>the Bird</td>
+              <td>
+                <button type="button" class="btn btn-primary edBtn" data-toggle="modal" data-target="#exampleModalCenter">Edit</button>
+                <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
-</form>
 
-      <table class="table table-bordered table-dark">
-  <thead>
-    <tr style="background-color:#4c4f52;">
-      <th scope="col">Number</th>
-      <th scope="col">Name</th>
-      <th scope="col">Surname</th>
-      <th scope="col">Operation</th>
-    </tr>
-  </thead>
-  <tbody class="tbdApp">
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>
-        <button type="button" class="btn btn-primary edBtn">Edit</button>
-        <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
-      </td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>
-        <button type="button" class="btn btn-primary edBtn">Edit</button>
-        <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
-      </td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>
-        <button type="button" class="btn btn-primary edBtn">Edit</button>
-        <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
-      </td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>
-        <button type="button" class="btn btn-primary edBtn">Edit</button>
-        <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
-      </td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>
-        <button type="button" class="btn btn-primary edBtn">Edit</button>
-        <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
-      </td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>
-        <button type="button" class="btn btn-primary edBtn">Edit</button>
-        <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
-      </td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>
-        <button type="button" class="btn btn-primary edBtn">Edit</button>
-        <button type="button" class="btn btn-danger delBtn" style="margin-left:20px;" >Delete</button>
-      </td>
-    </tr>
-  </tbody>
-</table>
-</div>
-    </div>
-  </div>
-
-    </body>
-  </html>
+</body>
+</html>
